# Stock-Market-Data

./: README.md  manage.py  pre-commit.sh  pyproject.toml
stock_market_data/: asgi.py  settings.py  urls.py  wsgi.py
stocks/: admin.py  models.py  serializers.py  urls.py  views.py
stocks/management/commands/: fetchdata.py
stocks/migrations/: 0001_initial.py  0002_rename_stock_historicalprice_symbol.py  0003_alter_historicalprice_unique_together.py
